@@ -118,6 +118,7 @@ extern int yylex(void);
 %token ADMIN
 %token INCLUDE
 %token INCLUDESTR
+%token TYPE
 %%
 
 
@@ -153,11 +154,12 @@ USER_DEFS: USER_DEFS USER_DEF
 USER_DEF: USER IDENTIFIER ';'{register_user($2);}
 ;
 
+TYPE_DEF: TYPE IDENTIFIER ';'{register_type($2);}
 
 DOMAIN_DEF  : DOMAIN IDENTIFIER ';' {register_domain($2,0); }
 ;
 
-BODY_DEFS :ALLOW_DEF|DENY_DEF|ALLOWNET_DEF|ALLOWCOM_DEF|ALLOWPRIV_DEF|ALLOWFS_DEF|ALLOWDEV_DEF|INCLUDE_DEF|ALLOWTMP_DEF|ALLOWKEY_DEF
+BODY_DEFS :ALLOW_DEF|DENY_DEF|ALLOWNET_DEF|ALLOWCOM_DEF|ALLOWPRIV_DEF|ALLOWFS_DEF|ALLOWDEV_DEF|INCLUDE_DEF|ALLOWTMP_DEF|ALLOWKEY_DEF|TYPE_DEF
           |BODY_DEFS ALLOW_DEF
           |BODY_DEFS DENY_DEF
           |BODY_DEFS ALLOWNET_DEF
@@ -168,6 +170,7 @@ BODY_DEFS :ALLOW_DEF|DENY_DEF|ALLOWNET_DEF|ALLOWCOM_DEF|ALLOWPRIV_DEF|ALLOWFS_DE
           |BODY_DEFS INCLUDE_DEF
           |BODY_DEFS ALLOWTMP_DEF
           |BODY_DEFS ALLOWKEY_DEF
+          |BODY_DEFS TYPE_DEF
 ;
 
 ALLOW_DEF  : ALLOW PATH  PERMISSIONS ';' {register_file_rule($2);}
